--- a/docker/base/Dockerfile
+++ b/docker/base/Dockerfile
@@ -6,14 +6,15 @@ MAINTAINER Alexander Goncearenco <alexander.goncearenco@gmail.com>
 
 # Setup packages
 USER root
-RUN apt-get -y -m update && apt-get install -y wget unzip zip libgsl-dev libgsl2 bzip2 build-essential git
+
+RUN apt-get -y -m update && apt-get -y upgrade
+RUN  apt-get install -y wget unzip zip libgsl-dev libgsl2 bzip2 build-essential git
+
+RUN apt-get -y clean
+RUN apt-get -y autoclean
 
 # switch back to the ubuntu user so this tool (and the files written) are not owned by root
 RUN groupadd -r -g 1000 ubuntu && useradd -r -g ubuntu -u 1000 ubuntu
-
-apt-get -y -m update && apt-get -y upgrade
-apt-get -y clean
-apt-get -y autoclean
 
 USER ubuntu
 
