--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -11,7 +11,7 @@ MAINTAINER Alexander Goncearenco <alexander.goncearenco@gmail.com>
 # Setup packages
 USER root
 # RUN apt-get -y -m update && apt-get -y -m upgrade && apt-get install -y wget unzip zip libgsl-dev libgsl2
-RUN apt-get -y -m update && apt-get install -y wget unzip zip libgsl-dev libgsl2 bzip2 build-essential python-pip git
+RUN apt-get -y -m update && apt-get install -y wget unzip zip libgsl-dev libgsl2 bzip2 build-essential python-pip git zlib1g-dev lib32z1-dev
 # gsl-bin libgsl0-dbg libgsl0-dev libgsl0ldbl
 
 # switch back to the ubuntu user so this tool (and the files written) are not owned by root
