--- a/docker/screw/Dockerfile
+++ b/docker/screw/Dockerfile
@@ -5,6 +5,8 @@ USER ubuntu
 WORKDIR /home/ubuntu
 ENV HOME /home/ubuntu
 
+RUN apt-get -y -m update && apt-get install -y zlib1g-dev lib32z1-dev
+
 RUN git clone https://github.com/Epigenomics-Screw/Screw.git
 RUN mkdir /home/ubuntu/bin
 RUN wget -q https://raw.githubusercontent.com/JinfengChen/Scripts/master/Shell/bedGraph2bigwig.sh -O /home/ubuntu/bin/bedGraph2bigwig.sh
