--- a/docker/screw/Dockerfile
+++ b/docker/screw/Dockerfile
@@ -1,11 +1,13 @@
 
 FROM quay.io/epigenomicscrew/base
 
+USER root
+RUN apt-get -y -m update && apt-get install -y zlib1g-dev lib32z1-dev
+USER ubuntu
+
 USER ubuntu
 WORKDIR /home/ubuntu
 ENV HOME /home/ubuntu
-
-RUN apt-get -y -m update && apt-get install -y zlib1g-dev lib32z1-dev
 
 RUN git clone https://github.com/Epigenomics-Screw/Screw.git
 RUN mkdir /home/ubuntu/bin
