--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,8 @@ install:
   - pip install -U setuptools
   - pip install cwl-runner
 script:
-  - cwltool cwl/tools/preprocess.cwl --toConvert test_data/GSM1589192_K562.1_2.txt.chr19
+  - mkdir tmp
+  - cp cwl/tools/*.cwl tmp
+  - for cwlfile in `ls tmp`; do sed -i "" "s/epigenomicscrew\/screw/epigenomicscrew\/screw:${TRAVIS_PULL_REQUEST_BRANCH:-$TRAV
+IS_BRANCH}/g" tmp/$cwlfile; done;
+  - cwltool tmp/preprocess.cwl --toConvert test_data/GSM1589192_K562.1_2.txt.chr19
