Make -i switch work for GNU Sed

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,5 @@ install:
 script:
   - mkdir tmp
   - cp cwl/tools/*.cwl tmp
-  - for cwlfile in `ls tmp`; do sed -i "" "s/epigenomicscrew\/screw/epigenomicscrew\/screw:${TRAVIS_PULL_REQUEST_BRANCH:-$TRAVIS_BRANCH}/g" tmp/$cwlfile; done;
+  - for cwlfile in `ls tmp`; do sed -i "s/epigenomicscrew\/screw/epigenomicscrew\/screw:${TRAVIS_PULL_REQUEST_BRANCH:-$TRAVIS_BRANCH}/g" tmp/$cwlfile; done;
   - cwltool tmp/preprocess.cwl --toConvert test_data/GSM1589192_K562.1_2.txt.chr19
