--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ install:
   - pip install -U setuptools
   - pip install cwl-runner
 script:
-  - cwltool cwl/tools/preprocess.cwl --toConvert test_data/GSM1589192_K562.1_2.txt.chr19
+  - cwltool cwl/tools/preprocess.cwl --toConvert test_data/GSM1589192_K562.1_2.txt.chr19 --format farlik2013
